--- a/semana3/assetsanimations.html
+++ b/semana3/assetsanimations.html
@@ -1,6 +1,6 @@
 <html>
 <head>
-  <script src="https://aframe.io/releases/1.6.0/aframe.min.js"></script>
+  <script src="https://aframe.io/releases/1.4.0/aframe.min.js"></script>
 </head>
 <body>
   <a-scene>
@@ -14,20 +14,19 @@
       <a-asset-item id="personagem" src="./assets/City Pack.undefined-glb/Adventurer.glb"></a-asset-item>
       <a-asset-item id="enderman" src="./assets/enderman/scene.gltf"></a-asset-item>
       <a-asset-item id="minecraft_world" src="./assets/minecraft_world/scene.gltf"></a-asset-item>
+      <a-asset-item id="gorilla" src="./assets/gorilla/source/model.gltf"></a-asset-item>
+      <a-asset-item id="villager" src="./assets/minecraft_-_villager/scene.gltf"></a-asset-item>
+      <a-asset-item id="dog" src="./assets/dog/scene.gltf"></a-asset-item> 
     </a-assets>
 
     <a-sky src="#fundo"></a-sky>
-
-    <a-plane
-      material="src:#chao"
-      rotation="-90 0 0"
-      repeat="5 5"
-      scale="10 10 1">
-    </a-plane>
+    <a-sky id="sky" color="black"></a-sky>
 
     <a-entity position="0 0 8" rotation="0 0 0">
       <a-entity position="0 1 5">
-        <a-camera fov="120"></a-camera>
+        <a-camera fov="120">
+            <a-cursor fuse="true"></a-cursor>
+        </a-camera>
       </a-entity>
     </a-entity>
 
@@ -36,48 +35,86 @@
       gltf-model="#enderman"
       position="0 0 3"
       scale="0.25 0.25 0.25"
-      animation="property: position; to: 0 0 10; dur: 5000; easing: linear; loop: false;">
+      animation="property: position; to: 0 0 10; dur: 5000; easing: linear; loop: false;"
+      event-set__animationcomplete="event: animationcomplete; _target: #minecraft_world_entity; visible: true;">
+    </a-entity>
+
+    <a-entity
+        id="gorilla-entity"
+        gltf-model="#gorilla"
+        position="0 0 9"
+        rotation="0 180 0"
+        scale="0.5 0.5 0.5"
+        visible="false"
+        animation="property: position; to: 0 0 11; dur: 3000; easing: linear; startEvents: moveGorilla;">
+    </a-entity>
+
+    <a-entity
+        id="villager_entity"
+        gltf-model="#villager"
+        position="-2 1.5 9"
+        scale="0.05 0.05 0.05"
+        visible="false"
+        animation="property: position; to: -2 1.5 11; dur: 3000; easing: linear; startEvents: moveVillager;">
+    </a-entity>
+  
+    <a-entity
+        id="dog_entity"
+        gltf-model="#dog"
+        position="2 1 9"
+        scale="0.25 0.25 0.25"
+        visible="false"
+        animation="property: position; to: 2 1 10.5; dur: 3000; easing: linear; startEvents: moveDog;">
+    </a-entity>
+  
+
+    <!-- Minecraft World -->
+    <a-entity
+      id="minecraft_world_entity"
+      gltf-model="#minecraft_world"
+      position="0 0 9"
+      visible="false">
+    </a-entity>
+
+    <!-- Button on Enderman -->
+    <a-entity
+      id="enderman-button"
+      geometry="primitive: plane; height: 0.5; width: 0.5;"
+      material="color: red; opacity: 0.7;"
+      position="0 3 11"
+      text="value: Click Me; align: center;"
+      visible="false"
+      event-set__animationcomplete="event: animationcomplete; _target: #enderman-button; visible: true;">
     </a-entity>
   </a-scene>
+
   <script>
-    // Wait for the scene to load
-    document.querySelector('a-scene').addEventListener('loaded', function () {
-      // Select the Enderman entity
-      const endermanEntity = document.querySelector('#enderman-entity');
+    // Show the button when the Enderman animation completes
+    document.querySelector('#enderman-entity').addEventListener('animationcomplete', function () {
+      document.querySelector('#enderman-button').setAttribute('visible', 'true');
+    });
   
-      // Add a general event listener for debugging
-      endermanEntity.addEventListener('animationcomplete', function (event) {
-        console.log('Animation complete event fired:', event.detail);
-        // Get the A-Frame scene
-        const scene = document.querySelector('a-scene');
+    // Make the Minecraft world visible and trigger gorilla movement when the button is clicked
+    document.querySelector('#enderman-button').addEventListener('click', function () {
+    document.querySelector('#minecraft_world_entity').setAttribute('visible', 'true');
+    document.querySelector('#enderman-entity').setAttribute('visible', 'false');
+    document.querySelector('#enderman-button').setAttribute('visible', 'false');
+    document.querySelector('#sky').setAttribute('color', 'cyan');
 
-        // Remove all existing children from the scene
-        while (scene.firstChild) {
-          scene.removeChild(scene.firstChild);
-        }
+    // Gorilla Movement
+    const gorilla = document.querySelector('#gorilla-entity');
+    gorilla.setAttribute('visible', 'true');
+    gorilla.emit('moveGorilla'); // Trigger the gorilla movement animation
 
-        // Add the Minecraft world
-        const minecraftWorld = document.createElement('a-entity');
-        minecraftWorld.setAttribute('gltf-model', '#minecraft_world');
-        minecraftWorld.setAttribute('position', '0 0 0');
-        minecraftWorld.setAttribute('scale', '0.5 0.5 0.5');
-        
-        scene.appendChild(minecraftWorld);
+    // Villager Movement
+    const villager = document.querySelector('#villager_entity');
+    villager.setAttribute('visible', 'true');
+    villager.emit('moveVillager'); // Trigger the villager movement animation
 
-        console.log('Minecraft scene loaded.');
-      });
-  
-      // Add a general listener for all events on the Enderman
-      endermanEntity.addEventListener('animationbegin', function () {
-        console.log('Animation began.');
-      });
-  
-      // Check if the entity has animations
-      if (!endermanEntity.components.animation) {
-        console.error('No animation component found on the Enderman entity.');
-      } else {
-        console.log('Animation component found:', endermanEntity.components.animation);
-      }
+    // Dog Movement
+    const dog = document.querySelector('#dog_entity');
+    dog.setAttribute('visible', 'true');
+    dog.emit('moveDog'); // Trigger the dog movement animation
     });
   </script>  
 </body>
